Add transformation of strings to being wellformed for LLVM IR, stdout+stderr printing to TACExecutor, and some minor bugfixes